# hmcts-dev-test

./: README.md
backend/: pyproject.toml
backend/src/apps/tasks/: admin.py  models.py  serializers.py  views.py
backend/src/apps/tasks/migrations/: 0001_initial.py
backend/src/apps/tasks/tests/integration/: test_tasks_viewset.py
backend/src/apps/tasks/tests/unit/: test_tasks_model.py  test_tasks_serializer.py
backend/src/config/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/services/: task-service.ts
frontend/src/lib/tests/: page.server.test.ts  task-service.test.ts
frontend/src/lib/types/: task.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/tasks/[slug]/: +page.server.ts  +page.svelte
frontend/src/routes/tasks/[slug]/edit/: +page.server.ts  +page.svelte
frontend/src/routes/tasks/all/: +page.server.ts  +page.svelte
frontend/src/routes/tasks/new/: +page.server.ts  +page.svelte
